--- a/src/css/casino-top-banner-slider.css
+++ b/src/css/casino-top-banner-slider.css
@@ -585,7 +585,7 @@
 }
 
 .top-banner-component .image-container .display-tablet {
-    display: none
+    /* display: none */
 }
 
 @media(min-width: 501px)and (max-width:1279px) {
