--- a/src/css/default.css
+++ b/src/css/default.css
@@ -23,7 +23,7 @@
     color: #f2008d;
     border-radius: 5px;
     padding: 0px;
-    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .button-support>img {
@@ -304,7 +304,7 @@
 }
 
 .game-iframe-view_gameIframeWrapper.game-iframe-view_sportbook {
-    height: calc(100vh - 79px) !important;
+    height: calc(100vh - 49px) !important;
     min-height: 100%;
     max-width: 100%;
     height: 100%
@@ -312,13 +312,13 @@
 
 @media(max-width: 992px) {
     .game-iframe-view_gameIframeWrapper.game-iframe-view_sportbook {
-        top: 75px;
+        top: 45px;
         z-index: 999;
         height: 100% !important
     }
 
     .game-iframe-view_gameIframeWrapper.game-iframe-view_sportbook>.game-iframe-view_gameIframe {
-        height: calc(100% - 75px)
+        height: calc(100% - 45px)
     }
 }
 
