live casino page

--- a/src/css/888casino.css
+++ b/src/css/888casino.css
@@ -4,9 +4,6 @@
 
 .load-more {
     cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
     user-select: none;
     border-radius: 100px;
     margin: 0 auto;
@@ -16,22 +13,10 @@
     text-transform: capitalize;
     font-size: 1.4em;
     line-height: 1.2;
-    max-height: 2.2em;
-    padding: 1em;
-    -webkit-letter-spacing: 0.05em;
-    -moz-letter-spacing: 0.05em;
-    -ms-letter-spacing: 0.05em;
     letter-spacing: 0.05em;
-    -webkit-align-items: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
     justify-content: center;
     box-sizing: border-box;
-    -webkit-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
     border-width: 2px;
     border-style: solid;
@@ -40,6 +25,8 @@
     border-color: #7BF037;
     box-shadow: none;
     padding: 1rem 3rem;
+    display: inline-block;
+    margin-bottom: 20px;
 }
 
 .load-more:hover {
