--- a/src/css/casino-top-banner-slider.css
+++ b/src/css/casino-top-banner-slider.css
@@ -574,8 +574,9 @@
 .top-banner-component .image-container .display-mobile {
     display: block;
     height: 100%;
-    object-position: right;
-    width: 100%
+    object-position: center;
+    width: 100%;
+    object-fit: cover;
 }
 
 @media(min-width: 501px) {
