--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -8652,3 +8652,35 @@ html.cgp-rtl .sc-bqOBqt {
     opacity: 0.85;
     z-index: 118;
 }
+
+.fEgjKI {
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    min-width: 80px;
+}
+
+.lmancD {
+    width: 20px;
+    height: 20px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url("../assets/svg/post-login-mobile.svg");
+    color: #FCE523;
+}
+
+.hhvXbW {
+    font-size: 1.3rem;
+    color: #FCE523;
+    padding: 0px 8px;
+    white-space: nowrap;
+}
