--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -6174,6 +6174,19 @@ html.cgp-mobile .sc-hJwfHn {
     background: rgba(255, 255, 255, 0.8);
 }
 
+@media (max-width: 768px) {
+    .dzWWGI {
+        margin: 0;
+        padding: 1rem;
+        width: 100%;
+        max-height: unset;
+    }
+
+    .iPJEWf {
+        padding-right: 10px;
+    }
+}
+
 .keApjc {
     display: block;
     position: absolute;
@@ -6999,6 +7012,14 @@ html.cgp-mobile .sc-gzIglc {
     -webkit-transition: color 0.2s ease, background-color 0.2s ease, border-bottom 0.2s ease;
     transition: color 0.2s ease, background-color 0.2s ease, border-bottom 0.2s ease;
     color: #7BF037;
+}
+
+.kBkDtU img {
+    filter: brightness(0.5) 
+        sepia(1) 
+        hue-rotate(60deg) 
+        saturate(3) 
+        brightness(1.5);
 }
 
 .ezbnfo {
