--- a/src/css/default.css
+++ b/src/css/default.css
@@ -1432,7 +1432,7 @@ html {
 
     .rllogin-portrait .mfa-container-step-1,
     .rllogin-portrait .rllogin-footer,
-    .rllogin-portrait .rllogin-form-container,
+    .rllogin-form-container,
     .rllogin-portrait .rllogin-register-container,
     .rllogin-portrait .rllogin-regulations-logo {
         width: 80%
