--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -1278,7 +1278,8 @@ html.cgp-rtl .sc-hBpigv {
 
 @media (max-width:1479px) {
     .bdSJRm {
-        margin-right: 8px;
+        margin-right: 4px;
+        margin-left: 4px;
     }
 }
 
@@ -3327,7 +3328,7 @@ html.cgp-rtl .sc-eZfbsf.open::before {
     -webkit-transition: -webkit-transform 0.2s ease-in-out;
     -webkit-transition: transform 0.2s ease-in-out;
     transition: transform 0.2s ease-in-out;
-    z-index: 120;
+    z-index: 9001;
     min-width: 23rem;
 }
 
@@ -5357,6 +5358,10 @@ html.cgp-mobile.cgp-embedded-hybrid .home-page .sc-gwLeCi.move-top {
 @media (max-width: 768px) {
     .hvWNQq {
         padding: 0.3rem 0;
+    }
+
+    .casino-games-container .hvWNQq {
+        padding: 0.3rem 1.5rem;
     }
 }
 
@@ -8103,7 +8108,7 @@ html.cgp-rtl .sc-bqOBqt {
     -webkit-transition: transform 0.5s ease-in-out;
     transition: transform 0.5s ease-in-out;
     overflow: hidden;
-    z-index: 119;
+    z-index: 9000;
 }
 
 .cZWmCN.user-menu-open {
@@ -8627,21 +8632,6 @@ html.cgp-rtl .sc-bqOBqt {
     .kBwInc {
         line-height: 2.2;
     }
-}
-
-.hbEPYD {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(23, 23, 23, 0.85);
-    z-index: -1;
-    opacity: 0;
-    -webkit-transition: all 0.5s ease-in;
-    transition: all 0.5s ease-in;
 }
 
 .WziHW {
